# TAKE-FROM-SERVER

./: .gitignore  44e2  44x.md  AUDIT_REPORT.md  FINAL_AUDIT_REPORT.md  FOOTBALL_AUDIT.md  LIQUIDITY_AUDIT.md  TENNIS_AUDIT.md  ecosystem.config.js  fcx.md  ffgt.md  ffq.md  ffqa.md  fr1.md  fr2_bookmaker_intelligence.md  frontend_live_ops_todo.md  ga.md  gfds.md  hg.md  kkj.md  multi_source_arch.md  rre.md  rrr5.md  rrt.md  s.sh  sportmonks_batch_polling_runtime.md  sz.md  tennis.md  tennis_blueprint.md
ai_engine/: main.py  requirements.txt
ai_engine/assistant/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py
ai_engine/cricket/: batsman_generator.py  bookmaker_bias.py  boundary_necessity.py  coherence.py  context_manager.py  dossier.py  exposure.py  fancy_bias.py  fancy_generator.py  fancy_reviewer.py  global_monitor.py  llm_cache.py  (+17 more)
back/: .gitignore  BACKEND_PROVIDER_INTEGRATION.md  mix.exs  tmp_live_audit.exs
fg/: 45.md  5.md  FEATURES_ADDED.md  cr7.md  cricket-automation.md  cricket-orchestrator-master-plan.md  cricket.md  dgv.md  fde.md  fqa.md  fqw.md  frt.md  ft4.md  ft5.md  gf.md  gv.md  phase4-live-ui-todo.md  plan.md  rf.md  rfdt.md  s.sh  seo.md  sports_api_integration_prompt.md  tangle.md  theme.md  todop.md  yt58.md
next/: next.config.ts  package-lock.json  package.json
scraper/: .env.example  Cargo.toml
scraper/src/: browser.rs  config.rs  control.rs  main.rs  normalize.rs  polling.rs  redis_out.rs  ws.rs
scraper/src/parsers/: common.rs  generic_json.rs  mod.rs  one_x_bet.rs
tests/: simulate_self_heal.py  test_bookmaker_replay.py
(+720 files in other folders)
