[package]
name = "scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
futures-util = "0.3"
http = "1"
rand = "0.9"
redis = { version = "0.32", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset", "json", "gzip", "brotli", "deflate", "cookies"] }
reqwest_cookie_store = "0.8"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
webpki-roots = "0.26"
